--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ backend/venv/
 
 # Backend instance folder
 backend/instance/
+
+# Logs
+backend/logs/
+
+# JSON files
+backend/paper_portolio.json
+backend/notifications.json
