--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,26 +1,75 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-#local files
-paper_portfolio.json marketmind.db
-
-# misc
+# --- General / OS ---
 .DS_Store
+Thumbs.db
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# --- IDEs ---
+.idea/
+.vscode/
+
+# --- Environment Variables (CRITICAL) ---
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# --- Frontend (Node/React) ---
+node_modules/
+frontend/node_modules/
+/build
+/.pnp
+.pnp.js
+.cache/
+frontend/.cache/
+frontend/build/
+
+# --- Backend (Python) ---
+# Bytecode
+__pycache__/
+backend/__pycache__/
+*.py[cod]
+
+# Virtual Environments
+venv/
+backend/venv/
+env/
+
+# Distribution / Installs
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Testing & Coverage
+.coverage
+htmlcov/
+backend/.coverage
+
+# Flask
+instance/
+backend/instance/
+
+# --- Project Specific Data (Do Not Commit) ---
+# Database
+*.db
+*.sqlite3
+backend/marketmind.db
+
+# User Data / JSON persistence
+paper_portfolio.json
+backend/paper_portfolio.json
+backend/notifications.json
