--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ backend/instance/
 backend/logs/
 
 # JSON files
-backend/paper_portolio.json
+backend/paper_portfolio.json
 backend/notifications.json
