Updated gitignore and cache

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ frontend/node_modules/
 .cache/
 frontend/.cache/
 frontend/build/
+frontend/package-lock.json
 
 # --- Backend (Python) ---
 # Bytecode
