removed cached .env, and fixed fundamentals page to show the data again.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@alango/dr-manhattan": "^0.1.6",
     "activate": "^0.0.1",
     "base": "^3.0.0",
     "react-sparklines": "^1.7.0",
